Port over the basic math operations.

--- a/meson.build
+++ b/meson.build
@@ -2,4 +2,4 @@ project('fonttoy', 'cpp',
     license: 'GPLv2+',
     default_options: ['cpp_std=c++17', 'warning_level=3'])
 
-executable('fonttoy', 'fonttoy.cpp')
+executable('fonttoy', 'main.cpp', 'fonttoy.cpp')
