--- a/meson.build
+++ b/meson.build
@@ -3,6 +3,7 @@ project('fonttoy', 'cpp',
     default_options: ['cpp_std=c++17', 'warning_level=3'])
 
 lbfgs_dep = dependency('liblbfgs', fallback: ['liblibfgs', 'liblbfgs_dep'])
+tinyxml2_dep = dependency('tinyxml2', fallback: ['tinyxml2', 'tinyxml2_dep'])
 
-executable('fonttoy', 'main.cpp', 'fonttoy.cpp',
-    dependencies: lbfgs_dep)
+executable('fonttoy', 'main.cpp', 'fonttoy.cpp', 'svgexporter.cpp',
+    dependencies: [tinyxml2_dep, lbfgs_dep])
