Write in some constraint classes.

--- a/meson.build
+++ b/meson.build
@@ -5,5 +5,5 @@ project('fonttoy', 'cpp',
 lbfgs_dep = dependency('liblbfgs', fallback: ['liblibfgs', 'liblbfgs_dep'])
 tinyxml2_dep = dependency('tinyxml2', fallback: ['tinyxml2', 'tinyxml2_dep'])
 
-executable('fonttoy', 'main.cpp', 'fonttoy.cpp', 'svgexporter.cpp',
+executable('fonttoy', 'main.cpp', 'fonttoy.cpp', 'svgexporter.cpp', 'constraints.cpp',
     dependencies: [tinyxml2_dep, lbfgs_dep])
