--- a/meson.build
+++ b/meson.build
@@ -5,5 +5,9 @@ project('fonttoy', 'cpp',
 lbfgs_dep = dependency('liblbfgs', fallback: ['liblbfgs', 'liblbfgs_dep'])
 tinyxml2_dep = dependency('tinyxml2', fallback: ['tinyxml2', 'tinyxml2_dep'])
 
+if host_machine.cpu().startswith('wasm')
+    add_project_arguments('-DWASM', language: 'cpp')
+endif
+
 executable('fonttoy', 'main.cpp', 'fonttoy.cpp', 'svgexporter.cpp', 'constraints.cpp',
     dependencies: [tinyxml2_dep, lbfgs_dep])
